Create WorkCodeActivity dropdown
Create WorkCodeActivity dropdown

--- a/Web/TimeManagement/Views/Home/TimeEntry.cshtml
+++ b/Web/TimeManagement/Views/Home/TimeEntry.cshtml
@@ -1,89 +1,107 @@
-﻿
-<div class="row">
+﻿<div class="row">
     <div class="boxshade">
         <div class="boxhead">
             Time Entry Form
         </div>
         <div class="boxbody">
             <div class="col-lg-12 pad10 gap-bottom10" style="background-color: #F5F5F5;">
-                <div class="col-lg-1">
-                    <div class="col-lg-12 pad0 gap-bottom5">
-                        <b>Date</b>
+                <div class="row pad-bottom20">
+                    <div class="col-lg-3">
+                        <div class="col-lg-12 pad0 gap-bottom5">
+                            <b>Project</b>
+                        </div>
+                        <div class="col-lg-12 pad0">
+                            @Html.DropDownList("projects", (IEnumerable<SelectListItem>)ViewBag.Projects, new Dictionary<string, object>
+                    {
+                        {"data-bind", "value:projectId"},
+                         {"class", "form-control required"}
+                    })
+                            <div id="project" class="requi">
+                                Project is Required
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-lg-12 pad0">
-                        <input class="date form-control required" id="date" style="width: 100px !important" data-bind="value:executionDate" />
-                        <div id="Date" class="requi">
-                            Date is Required
+                    <div class="col-lg-3">
+                        <div class="col-lg-12 pad0 gap-bottom5">
+                            <b>Work Code</b>
+                        </div>
+                        <div class="col-lg-12 pad0">
+                            @Html.DropDownList("workCodes", (IEnumerable<SelectListItem>)ViewBag.WorkCodes, new Dictionary<string, object>
+                    {
+                        {"data-bind", "value:workCodeId"},
+                         {"class", "form-control required"}
+                    })
+                            <div id="workcode" class="requi">
+                                Workcode is Required
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="col-lg-12 pad0 gap-bottom5">
+                            <b>Work Code Activity</b>
+                        </div>
+                        <div class="col-lg-12 pad0">
+                            @Html.DropDownList("workCodeActivities", (IEnumerable<SelectListItem>)ViewBag.WorkCodesActivity, new Dictionary<string, object>
+                    {
+                        {"data-bind", "value:workCodeActivityId"},
+                         {"class", "form-control required"}
+                    })
+                            <div id="workcodeActivity" class="requi">
+                                WorkcodeActivity is Required
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
-                    <div class="col-lg-12 pad0 gap-bottom5">
-                        <b>Project</b>
-                    </div>
-                    <div class="col-lg-12 pad0">
-                        @Html.DropDownList("projects", (IEnumerable<SelectListItem>)ViewBag.Projects, new Dictionary<string, object>
-                {
-                    {"data-bind", "value:projectId"},
-                     {"class", "form-control required"}
-                })
-                        <div id="project" class="requi">
-                            Project is Required
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="col-lg-12 pad0 gap-bottom5">
+                            <b>Date</b>
+                        </div>
+                        <div class="col-lg-12 pad0">
+                            <input class="date form-control required" id="date" style="width: 100px !important" data-bind="value:executionDate" />
+                            <div id="Date" class="requi">
+                                Date is Required
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="col-lg-12 pad0 gap-bottom5">
-                        <b>Work Code</b>
-                    </div>
-                    <div class="col-lg-12 pad0">
-                        @Html.DropDownList("workCodes", (IEnumerable<SelectListItem>)ViewBag.WorkCodes, new Dictionary<string, object>
-                {
-                    {"data-bind", "value:workCodeId"},
-                     {"class", "form-control required"}
-                })
-                        <div id="workcode" class="requi">
-                            Workcode is Required
+                    <div class="col-lg-3">
+                        <div class="col-lg-12 pad0 gap-bottom5">
+                            <b>Hours</b>
+                        </div>
+                        <div class="col-lg-12 pad0">
+                            <input data-bind="value:hours" class="form-control required" id="hours" />
+                            <div id="Hours" class="requi">
+                                Hours is Required
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-1">
-                    <div class="col-lg-12 pad0 gap-bottom5">
-                        <b>Hours</b>
-                    </div>
-                    <div class="col-lg-12 pad0">
-                        <input data-bind="value:hours" class="form-control required" id="hours" />
-                        <div id="Hours" class="requi">
-                            Hours is Required
+                    <div class="col-lg-3">
+                        <div class="col-lg-12 pad0 gap-bottom5">
+                            <b>Description </b>
+                        </div>
+                        <div class="col-lg-12 pad0">
+                            <textarea data-bind="value:description" id="description" class="form-control required" style="width: 100%;"
+                                      cols="" rows="2"></textarea>
+                            <div id="desc" class="requi">
+                                Description is Required
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-2">
-                    <div class="col-lg-12 pad0 gap-bottom5">
-                        <b>Description </b>
-                    </div>
-                    <div class="col-lg-12 pad0">
-                        <textarea data-bind="value:description" id="description" class="form-control required" style="width: 100%;"
-                                  cols="" rows="2"></textarea>
-                        <div id="desc" class="requi">
-                            Description is Required
+                    <div class="col-lg-2">
+                        <div class="col-lg-12 pad0 gap-bottom5">
+                            &nbsp;
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-2">
-                    <div class="col-lg-12 pad0 gap-bottom5">
-                        &nbsp;
-                    </div>
-                    <div class="col-lg-12 pad0">
-                        <button id="btnAdd" data-bind="click:addTask" type="button" class="btn btn-info pull-right gap-right10">
-                            Add
-                        </button>
-                        <button id="btnEdit" data-bind="click:editTask" type="button" class="btn btn-info pull-right gap-right10">
-                            Save
-                        </button>
-                        <button id="btnCancel" type="button" class="btn btn-info pull-right gap-right10">
-                            Cancel
-                        </button>
+                        <div class="col-lg-12 pad0">
+                            <button id="btnAdd" data-bind="click:addTask" type="button" class="btn btn-info pull-right gap-right10">
+                                Add
+                            </button>
+                            <button id="btnEdit" data-bind="click:editTask" type="button" class="btn btn-info pull-right gap-right10">
+                                Save
+                            </button>
+                            <button id="btnCancel" type="button" class="btn btn-info pull-right gap-right10">
+                                Cancel
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -99,7 +117,7 @@
                                     Project
                                 </th>
                                 <th width="20%">
-                                    Work Code
+                                    Work Code Activity
                                 </th>
                                 <th width="5%">
                                     Hours
@@ -107,6 +125,7 @@
                                 <th width="35%">
                                     Description
                                 </th>
+
                                 <th width="10%">
                                     &nbsp;
                                 </th>
@@ -115,14 +134,17 @@
                         <tbody data-bind="template: { name:'activityTableTmpl', foreach:tasks }">
                         </tbody>
                         <tfoot>
+
                             <tr style="background-color: #2481B7; color: #FFF">
-                                <td colspan="3" style="text-align: right">
+
+                                <td colspan="4" style="text-align: right">
                                     <b>Total</b>
                                 </td>
                                 <td>
                                     <div id="total" style="font-weight: bold; text-align: center">
                                     </div>
                                 </td>
+
                                 <td colspan="2">
                                 </td>
                             </tr>
@@ -137,7 +159,7 @@
     <tr>
         <td data-bind="text:executionDate" style="text-align:center"></td>
         <td data-bind="text:project" style="text-align:left !important"></td>
-        <td data-bind="text:workCode" style="text-align:left !important"></td>
+        <td data-bind="text:workCodeActivities" style="text-align:left !important"></td>
         <td data-bind="text:hours" style="text-align:center"></td>
         <td data-bind="text:description" style="text-align:left !important"></td>
         <td>
@@ -153,6 +175,7 @@
         $('#Date').hide();
         $('#project').hide();
         $('#workcode').hide();
+        $('#workcodeActivity').hide();
         $('#Hours').hide();
         $('#desc').hide();
 
@@ -164,12 +187,38 @@
             sorter: data => data.sort((a, b) => a.text.localeCompare(b.text)),
         });
 
+        $("#workCodeActivities").select2({
+            sorter: data => data.sort((a, b) => a.text.localeCompare(b.text)),
+        });
+
+        $(document).on('change', '#workCodes', function () {
+            $('#workCodeActivities').empty();
+            $('#workcodeActivity').hide();
+            $('#workcode').hide();
+            $.ajax(
+                {
+                    url: "/Home/GetWorkCodeActivities",
+                    dataType: 'json',
+                    data: { id: $('#workCodes').val() },
+                    success: function (data) {
+                        $('#workCodeActivities').select2({
+                            placeholder: "Select WorkCodeActivity",
+                            data: data,
+                        })
+                        $('#workCodeActivities').trigger("change");  
+                    },
+                    error: function (jqXhr, textStatus, errorMessage) {
+                        console.log(errorMessage);
+                    }
+                });
+        });
     });
     function validate() {
 
         var date = $('#date').val();
         var project = $('#projects').val();
         var workcode = $('#workCodes').val();
+        var workcodeActivity = $('#workCodeActivities').val();
         var hours = $('#hours').val();
         var description = $('#description').val();
 
@@ -187,6 +236,10 @@
             $('#workcode').show();
             //  return false;
         }
+
+        if (workcodeActivity == "") {
+            $('#workcodeActivity').show();
+        }
         if (hours == "") {
             $('#Hours').show();
             // return false;
@@ -195,12 +248,7 @@
             $('#desc').show();
             //  return false;
         }
-
-
     }
-
-
-
     $("#date").on('click', function () {
         var date = $('#date').val();
         if (date == "") {
@@ -216,6 +264,7 @@
     });
 
     $("#projects").on('click', function () {
+
         var projects = $('#projects').val();
         if (projects == "") {
             $('#project').show();
@@ -224,17 +273,58 @@
             $('#project').hide();
             return false;
         }
+
+        return false;
+
+    });
+
+    $("#projects").on('change', function () {
+
+        var projects = $('#projects').val();
+        if (projects == "") {
+            $('#project').show();
+            return false;
+        } else if (projects != "") {
+            $('#project').hide();
+            return false;
+        }
+       
         return false;
 
     });
 
     $("#workCodes").on('click', function () {
         var workcode = $('#workCodes').val();
-        if (workcode == "") {
-            $('#workcode').show();
+        if (workcode != "") {
+            $('#workcode').hide();
             return false;
         } else if (workcode != "") {
             $('#workcode').hide();
+            return false;
+        }
+        return false;
+
+    });
+    
+    $("#workCodeActivities").on('change', function () {
+        if (workcodeActivity == "") {
+            $('#workcodeActivity').show();
+            return false;
+        }
+        else {
+            $('#workcodeActivity').hide();
+            return false;
+        }
+        return false;
+    });
+
+    $("#workCodeActivities").on('click', function () {
+        var workcodeActivity = $('#workCodeActivities').val();
+        if (workcodeActivity == "") {
+            $('#workcodeActivity').show();
+            return false;
+        } else if (workcodeActivity == "") {
+            $('#workcodeActivity').hide();
             return false;
         }
         return false;
@@ -257,38 +347,26 @@
         if (desc == "") {
             $('#desc').show();
             return false;
-        } else if (desc != "") {
+        } else {//if (desc != "") {
             $('#desc').hide();
             return false;
         }
         return false;
 
     });
-
-
-
-
-
-
-
-
-
-
-
 </script>
 <script type="text/javascript">
     var viewModal;
-
-
     function task(modal) {
 
          return {
             id: ko.observable(modal.taskId()),
             executionDate: ko.observable(modal.executionDate()),
             projectId: ko.observable(modal.projectId()),
-            project: ko.observable(modal.project()),
-            workCodeId: ko.observable(modal.workCodeId()),
-            workCode: ko.observable(modal.workCode()),
+             project: ko.observable(modal.project()),
+             workCodeId: ko.observable(modal.workCodeId()),
+             workCodeActivities: ko.observable(modal.workCodeActivity()),
+             workCodeActivityId: ko.observable(modal.workCodeActivityId()),
             hours: ko.observable(parseFloat(modal.hours()).toFixed(2)),
             description: ko.observable(modal.description()),
 
@@ -354,12 +432,18 @@
         this.executionDate = ko.observable()
         this.projectId = ko.observable()
         this.workCodeId = ko.observable();
+        this.workCodeActivityId = ko.observable();
+        this.workCodeActivity = ko.observable();
         this.hours = ko.observable();
         this.description = ko.observable();
         this.tasks = ko.observableArray([]);
 
         this.workCode = ko.computed(function() {
             return $("#workCodes option[value='" +self.workCodeId() + "']").text();
+        });
+
+       this.workCodeActivity = ko.computed(function () {
+           return $("#workCodeActivities option[value='" + self.workCodeActivityId() + "']").text();
         });
 
         this.project = ko.computed(function() {
@@ -382,11 +466,10 @@
                     {
                         newTask.id(result.Id);
                         self.tasks.push(newTask);
-
+                        
                         //calculateTotal
                         calculateTotal();
-                        clearDataonadd();
-
+                        clearDataonadd();                                         
                     }
                 }
             });
@@ -459,7 +542,6 @@
                     $.each(result, function(i, item) {
                         viewModal.tasks.push(new task(ko.mapping.fromJS(item)));
                     });
-
                     //calculateTotal
                     calculateTotal();
                 }
@@ -491,22 +573,32 @@ function clearData()
     $("#workCodes option").find('option').removeAttr("selected");
     $("#workCodes option:first").attr("selected",true);
 
+    viewModal.workCodeActivityId("");
+    $("#workCodeActivities option").find('option').removeAttr("selected");
+    $("#workCodeActivities option:first").attr("selected", true);
+
     viewModal.hours("");
     viewModal.description("");
 }
 
 function clearDataonadd()
 {
-
-
     viewModal.taskId("");
-
-
+    viewModal.projectId("");
+    $("#projects option").find('option').removeAttr("selected");
+    $("#projects option:first").attr("selected", true);
+    $('#projects').val(null).trigger('change.select2');
 
     viewModal.workCodeId("");
     $("#workCodes option").find('option').removeAttr("selected");
-    $("#workCodes option:first").attr("selected",true);
+    $("#workCodes option:first").attr("selected", true);
+    $('#workCodes').val(null).trigger('change.select2');
 
+
+    viewModal.workCodeActivityId("");
+    $("#workCodeActivities option").find('option').removeAttr("selected");
+    $("#workCodeActivities option:first").attr("selected", true);
+    $('#workCodeActivities').empty();
     viewModal.hours("");
     viewModal.description("");
 }
