--- a/Web/TimeManagement/Views/Report/Billing.cshtml
+++ b/Web/TimeManagement/Views/Report/Billing.cshtml
@@ -152,7 +152,7 @@
                                     Consultant
                                 </th>
                                 <th style="background-color: #2481B7; color: #FFF">
-                                    Work Code
+                                    WorkCode Activity
                                 </th>
                                 <th style="background-color: #2481B7; color: #FFF">
                                     Bill Rate
