--- a/Web/TimeManagement/Views/Home/TimeEntry.cshtml
+++ b/Web/TimeManagement/Views/Home/TimeEntry.cshtml
@@ -11,49 +11,55 @@
                             <b>Project</b>
                         </div>
                         <div class="col-lg-12 pad0">
-                            @Html.DropDownList("projects", (IEnumerable<SelectListItem>)ViewBag.Projects, new Dictionary<string, object>
-                    {
-                        {"data-bind", "value:projectId"},
-                         {"class", "form-control required"}
-                    })
+                            <div class="required ui-corner-all">
+                                @Html.DropDownList("projects", (IEnumerable<SelectListItem>)ViewBag.Projects, new Dictionary<string, object>
+                        {
+                            {"data-bind", "value:projectId"},
+                             {"class", "form-control required"}
+                        })
+                            </div>
                             <div id="project" class="requi">
                                 Project is Required
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="col-lg-12 pad0 gap-bottom5">
+                        <div class="col-lg-12 pad0 gap-bottom5 ">
                             <b>Work Code</b>
                         </div>
                         <div class="col-lg-12 pad0">
-                            @Html.DropDownList("workCodes", (IEnumerable<SelectListItem>)ViewBag.WorkCodes, new Dictionary<string, object>
-                    {
-                        {"data-bind", "value:workCodeId"},
-                         {"class", "form-control required"}
-                    })
-                            <div id="workcode" class="requi">
-                                Workcode is Required
+                            <div class="required ui-corner-all">
+                                @Html.DropDownList("workCodes", (IEnumerable<SelectListItem>)ViewBag.WorkCodes, new Dictionary<string, object>
+                        {
+                            {"data-bind", "value:workCodeId"},
+                             {"class", "form-control required"}
+                        })
+                                </div>
+                                <div id="workcode" class="requi">
+                                    Workcode is Required
+                                </div>
                             </div>
                         </div>
-                    </div>
                     <div class="col-lg-3">
                         <div class="col-lg-12 pad0 gap-bottom5">
                             <b>Work Code Activity</b>
                         </div>
                         <div class="col-lg-12 pad0">
-                            @Html.DropDownList("workCodeActivities", (IEnumerable<SelectListItem>)ViewBag.WorkCodesActivity, new Dictionary<string, object>
-                    {
-                        {"data-bind", "value:workCodeActivityId"},
-                         {"class", "form-control required"}
-                    })
+                            <div class="required ui-corner-all">
+                                @Html.DropDownList("workCodeActivities", (IEnumerable<SelectListItem>)ViewBag.WorkCodesActivity, new Dictionary<string, object>
+                        {
+                            {"data-bind", "value:workCodeActivityId"},
+                             {"class", "form-control required"}
+                        })
+                             </div>
                             <div id="workcodeActivity" class="requi">
-                                WorkcodeActivity is Required
+                                    WorkcodeActivity is Required
+                                </div>
                             </div>
                         </div>
-                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3">
+                    <div class="col-lg-1">
                         <div class="col-lg-12 pad0 gap-bottom5">
                             <b>Date</b>
                         </div>
@@ -64,12 +70,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
-                        <div class="col-lg-12 pad0 gap-bottom5">
+                    <div class="col-lg-2">
+                        <div class="col-lg-12 pad-left10 gap-bottom5">
                             <b>Hours</b>
                         </div>
-                        <div class="col-lg-12 pad0">
-                            <input data-bind="value:hours" class="form-control required" id="hours" />
+                        <div class="col-lg-12 pad-left10">
+                            <input data-bind="value:hours" class="form-control required" id="hours" style="width: 100px !important"/>
                             <div id="Hours" class="requi">
                                 Hours is Required
                             </div>
@@ -87,18 +93,18 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-1">
                         <div class="col-lg-12 pad0 gap-bottom5">
                             &nbsp;
                         </div>
                         <div class="col-lg-12 pad0">
-                            <button id="btnAdd" data-bind="click:addTask" type="button" class="btn btn-info pull-right gap-right10">
+                            <button id="btnAdd" data-bind="click:addTask" type="button" class="btn btn-info pull-left gap-left2 gap-right10 gap-top10">
                                 Add
                             </button>
                             <button id="btnEdit" data-bind="click:editTask" type="button" class="btn btn-info pull-right gap-right10">
                                 Save
                             </button>
-                            <button id="btnCancel" type="button" class="btn btn-info pull-right gap-right10">
+                            <button id="btnCancel" type="button" class="btn btn-info pull-right gap-right10 ">
                                 Cancel
                             </button>
                         </div>
@@ -113,16 +119,19 @@
                                 <th width="10%">
                                     Date
                                 </th>
-                                <th width="20%">
+                                <th width="15%">
                                     Project
                                 </th>
-                                <th width="20%">
+                                <th width="15%">
+                                    Work Code 
+                                </th>
+                                <th width="15%">
                                     Work Code Activity
                                 </th>
                                 <th width="5%">
                                     Hours
                                 </th>
-                                <th width="35%">
+                                <th width="30%">
                                     Description
                                 </th>
 
@@ -159,6 +168,7 @@
     <tr>
         <td data-bind="text:executionDate" style="text-align:center"></td>
         <td data-bind="text:project" style="text-align:left !important"></td>
+        <td data-bind="text:workCode" style="text-align:left !important"></td>
         <td data-bind="text:workCodeActivities" style="text-align:left !important"></td>
         <td data-bind="text:hours" style="text-align:center"></td>
         <td data-bind="text:description" style="text-align:left !important"></td>
@@ -214,7 +224,6 @@
         });
     });
     function validate() {
-
         var date = $('#date').val();
         var project = $('#projects').val();
         var workcode = $('#workCodes').val();
@@ -224,30 +233,32 @@
 
         if (date == "") {
             $('#Date').show();
-            // return false;
+             return false;
         }
 
         if (project == "") {
             $('#project').show();
-            //  return false;
+              return false;
         }
 
         if (workcode == "") {
             $('#workcode').show();
-            //  return false;
+              return false;
         }
 
         if (workcodeActivity == "") {
             $('#workcodeActivity').show();
+            return false;
         }
-        if (hours == "") {
+        if (hours == "" || hours == null) {
             $('#Hours').show();
-            // return false;
+            return false;
         }
         if (description == "") {
             $('#desc').show();
-            //  return false;
+              return false;
         }
+        return true;
     }
     $("#date").on('click', function () {
         var date = $('#date').val();
@@ -323,7 +334,7 @@
         if (workcodeActivity == "") {
             $('#workcodeActivity').show();
             return false;
-        } else if (workcodeActivity == "") {
+        } else if (workcodeActivity != "") {
             $('#workcodeActivity').hide();
             return false;
         }
@@ -332,10 +343,10 @@
     });
     $("#hours").change(function () {
         var hours = $('#hours').val();
-        if (hours == "") {
+        if (hours == "" ) {
             $('#Hours').show();
             return false;
-        } else if (hours != "") {
+        } else if (hours != "" ) {
             $('#Hours').hide();
             return false;
         }
@@ -347,7 +358,7 @@
         if (desc == "") {
             $('#desc').show();
             return false;
-        } else {//if (desc != "") {
+        } else if (desc != "") {
             $('#desc').hide();
             return false;
         }
@@ -358,17 +369,19 @@
 <script type="text/javascript">
     var viewModal;
     function task(modal) {
-
+       
          return {
             id: ko.observable(modal.taskId()),
             executionDate: ko.observable(modal.executionDate()),
             projectId: ko.observable(modal.projectId()),
              project: ko.observable(modal.project()),
              workCodeId: ko.observable(modal.workCodeId()),
+             workCode: ko.observable(modal.workCode()),
              workCodeActivities: ko.observable(modal.workCodeActivity()),
              workCodeActivityId: ko.observable(modal.workCodeActivityId()),
-            hours: ko.observable(parseFloat(modal.hours()).toFixed(2)),
-            description: ko.observable(modal.description()),
+             hours: ko.observable(parseFloat(modal.hours()).toFixed(2)),
+             description: ko.observable(modal.description()),
+             
 
             removeTask: function () {
                 var self = this;
@@ -415,7 +428,7 @@
 
                 $("#workCodes option").find('option').removeAttr("selected");
                 $("#workCodes option:contains("+self.workCode() +")").attr("selected",true);
-                viewModal.workCodeId($("#workCodes").val());
+                viewModal.workCode($("#workCodes").val());
 
                 viewModal.hours(self.hours());
                 viewModal.description(self.description());
@@ -432,6 +445,7 @@
         this.executionDate = ko.observable()
         this.projectId = ko.observable()
         this.workCodeId = ko.observable();
+        this.workCode = ko.observable();
         this.workCodeActivityId = ko.observable();
         this.workCodeActivity = ko.observable();
         this.hours = ko.observable();
@@ -450,29 +464,28 @@
             return $("#projects option[value='" +self.projectId() + "']").text();
         });
 
-        this.addTask = function() {
-
-            validate();
-            var newTask = new task(self);
-            $("#spinner").show();
-            $.ajax({
-                url: "@Url.Content("~/Home/AddTask")",
-                type: "POST",
-                data: ko.toJSON(newTask),
-                contentType: "application/json",
-                success: function(result) {
-                    $("#spinner").hide();
-                    if(result.message == 'success')
-                    {
-                        newTask.id(result.Id);
-                        self.tasks.push(newTask);
-                        
-                        //calculateTotal
-                        calculateTotal();
-                        clearDataonadd();                                         
+        this.addTask = function () {
+            
+           var showhide = validate();
+            if (showhide) {
+                var newTask = new task(self);
+                $("#spinner").show();
+                $.ajax({
+                    url: "@Url.Content("~/Home/AddTask")",
+                    type: "POST",
+                    data: ko.toJSON(newTask),
+                    contentType: "application/json",
+                    success: function (result) {
+                        $("#spinner").hide();
+                        if (result.message == 'success') {
+                            newTask.id(result.Id);
+                            self.tasks.push(newTask);
+                            calculateTotal();
+                            clearDataonadd();
+                        }
                     }
-                }
-            });
+                });
+            }
         };
 
         this.editTask = function() {
