--- a/Web/TimeManagement/Views/Master/_PVAddEmployee.cshtml
+++ b/Web/TimeManagement/Views/Master/_PVAddEmployee.cshtml
@@ -33,10 +33,20 @@
                     <div class="col-lg-6">
                         <div class="col-lg-12 gap-bottom5">
                             <div class="col-lg-4 gap-top5 text-right">
-                                <b>Employee Code</b></div>
+                                <b>Employee Code</b>
+                            </div>
                             <div class="col-lg-7">
                                 @Html.TextBoxFor(m => m.EmployeeCode, new { @class = "required  form-control", maxlength = "50" })
                                 <div class="gap-top5">@Html.ValidationMessageFor(m => m.EmployeeCode)</div>
+                            </div>
+                        </div>
+                        <div class="col-lg-12 gap-bottom5">
+                            <div class="col-lg-4 gap-top5 text-right">
+                                <b>User Id</b>
+                            </div>
+                            <div class="col-lg-7">
+                                @Html.TextBoxFor(m => m.LoginUserID, new { @class = "required  form-control" })
+                                <div class="gap-top5">@Html.ValidationMessageFor(m => m.LoginUserID)</div>
                             </div>
                         </div>
                         <div class="col-lg-12 gap-bottom5">
